# NESmod

./: .gitignore  settings.gradle  termux_client.py
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/nes/include/: AudioPlayer.h  Emulator.h  VirtualScreen.h
app/src/main/cpp/nes/src/: AudioPlayer.cpp  Controller.cpp  Emulator.cpp  VirtualScreen.cpp
app/src/main/java/com/nesmod/app/: MainActivity.java  NESBridge.java
scripts/: patch_apu.py
